Changelog
=========

4.1.6 (xx.xx.2023) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
 * Fix: Ensure that copying page correctly picks up the latest revision (Matt Westcott)
 * Fix: Adjust collection field alignment in multi-upload forms (LB (Ben) Johnston)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)

4.1.5 (02.05.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent TableBlock from becoming uneditable after save (Sage Abdullah)


4.1.4 (03.04.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: CVE-2023-28836 - Stored XSS attack via ModelAdmin views (Thibaud Colas)
 * Fix: CVE-2023-28837 - Denial-of-service via memory exhaustion when uploading large files (Jake Howard)
 * Fix: Fix radio and checkbox elements shrinking when using a long label (Sage Abdullah)
 * Fix: Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)
 * Fix: Fix timezone handling of `TemplateResponse`s for users with a custom timezone (Stefan Hammer, Sage Abdullah)
 * Fix: Ensure TableBlock initialisation correctly runs after load and its width is aligned with the parent panel (Dan Braghis)
 * Fix: Ensure that the JavaScript media files are loaded by default in Snippet index listings for date fields (Sage Abdullah)
 * Fix: Fix server-side caching of the icons sprite (Thibaud Colas)
 * Fix: Always show Add buttons, guide lines, Move up/down, Duplicate, Delete; in StreamField and Inline Panel (Thibaud Colas)
 * Fix: Ensure datetimepicker widget overlay shows over modals & drop-downs (LB (Ben) Johnston)
 * Maintenance: Render large image renditions to disk (Jake Howard)


4.1.3 (13.03.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Add right-to-left (RTL) support for the following form components: Switch, Minimap, live preview (Thibaud Colas)