@@ -9,6 +9,7 @@ from django.http import Http404, HttpResponseRedirect
 from django.shortcuts import get_object_or_404, redirect
 from django.urls import reverse
 from django.utils import timezone
+from django.utils.text import capfirst
 from django.utils.translation import gettext as _
 from django.utils.translation import gettext_lazy
 from django.views.generic import TemplateView
@@ -267,7 +268,7 @@ class IndexView(
 
         return column_class(
             field_name,
-            label=label.title(),
+            label=capfirst(label),
             sort_key=sort_key,
             **kwargs,
         )
